[package]
edition = "2021"
name = "hello-clif"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "uzi"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.75"
cfg-if = "1.0.0"
clap = "4.4.11"
cranelift = "0.102.1"
cranelift-codegen = {version = "0.102.1", features = ["disas", "trace-log"]}
cranelift-filetests = {git = "https://github.com/bytecodealliance/wasmtime", package = "cranelift-filetests"}
cranelift-module = "0.102.1"
cranelift-native = "0.102.1"
cranelift-object = "0.102.1"
cranelift-reader = "0.102.1"
cranelift-tools = {git = "https://github.com/bytecodealliance/wasmtime", package = "cranelift-tools"}
target-lexicon = "0.12.12"
walkdir = "2.4.0"

[features]
default = ["cranelift-codegen/all-arch", "cranelift-codegen/trace-log"]
